Gap fix

--- a/src/components/HeaderExchanges/HeaderExchanges.css
+++ b/src/components/HeaderExchanges/HeaderExchanges.css
@@ -1,45 +1,46 @@
 .header {
-    font-family: "PT Mono-Regular";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 13px;
-  
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  
-    max-width: 100%;
-  
-    background-color: #000000;
-    padding: 12px;
-  }
-  
-  .title-container-exchanges {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  
-    font-weight: 400;
-  
-    gap: 10px;
-  }
-  
+  font-family: "PT Mono-Regular";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 13px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  max-width: 100%;
+
+  background-color: #000000;
+  padding: 12px;
+}
+
+.title-container-exchanges {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  font-weight: 400;
+}
+
+.title-container-exchanges .header-exchanges-coin-title {
+  margin-left: 10px;
+}
+
+.cases-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.title-container-exchanges,
+.time,
+.cases-container {
+  flex-basis: 33%;
+}
+
+@media (min-width: 576px) {
   .cases-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
+    flex-basis: 35%;
   }
-  
-  .title-container-exchanges,
-  .time,
-  .cases-container {
-    flex-basis: 33%;
-  }
-  
-  @media (min-width: 576px) {
-    .cases-container {
-      flex-basis: 35%;
-    }
-  }
-  
+}
